chore: creating markup index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
   </head>
   <body>
     
+    <div class="container">
+        <div class="search-container">
+            <input type="text" placeholder="Enter movie name here..." id="movie-name" value="Stranger things">
+            <button id="search-btn">Search</button>
+        </div>
+        <div id="result">
+
+        </div>
+    </div>
+
     <script src="assets/js/key.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
